hphp/test/slow/ctor_param_promotion_bad_mod.php.expectf
Fatal error: syntax error, unexpected T_STATIC, expecting %s in %s/test/slow/ctor_param_promotion_bad_mod.php on line 7
